monitor/manifests/01-namespace.yaml
# Autor: Diego Regis M. F. dos Santos | diego-f-santos@openlabs.com.br
# Time: OpenLabs - DevOps | Infra | Versão: 2.2
# Nota: NADs do snmp-monitor usam range 100-200 para não conflitar com snmp-targets (10-90)
apiVersion: v1
kind: Namespace
metadata:
  name: snmp-monitor
  labels:
    app.kubernetes.io/part-of: vivo-snmp-prod
---
apiVersion: k8s.cni.cncf.io/v1
kind: NetworkAttachmentDefinition
metadata: {name: net-core, namespace: snmp-monitor}
spec:
  config: '{"cniVersion":"0.3.1","name":"net-core","type":"macvlan","master":"eth0","mode":"bridge","ipam":{"type":"host-local","subnet":"172.20.1.0/24","rangeStart":"172.20.1.100","rangeEnd":"172.20.1.200","gateway":"172.20.1.1"}}'
---
apiVersion: k8s.cni.cncf.io/v1
kind: NetworkAttachmentDefinition
metadata: {name: net-pe, namespace: snmp-monitor}
spec:
  config: '{"cniVersion":"0.3.1","name":"net-pe","type":"macvlan","master":"eth0","mode":"bridge","ipam":{"type":"host-local","subnet":"172.20.2.0/24","rangeStart":"172.20.2.100","rangeEnd":"172.20.2.200","gateway":"172.20.2.1"}}'
---
apiVersion: k8s.cni.cncf.io/v1
kind: NetworkAttachmentDefinition
metadata: {name: net-access, namespace: snmp-monitor}
spec:
  config: '{"cniVersion":"0.3.1","name":"net-access","type":"macvlan","master":"eth0","mode":"bridge","ipam":{"type":"host-local","subnet":"172.20.3.0/24","rangeStart":"172.20.3.100","rangeEnd":"172.20.3.200","gateway":"172.20.3.1"}}'
---
apiVersion: k8s.cni.cncf.io/v1
kind: NetworkAttachmentDefinition
metadata: {name: net-oam, namespace: snmp-monitor}
spec:
  config: '{"cniVersion":"0.3.1","name":"net-oam","type":"macvlan","master":"eth0","mode":"bridge","ipam":{"type":"host-local","subnet":"172.20.4.0/24","rangeStart":"172.20.4.100","rangeEnd":"172.20.4.200","gateway":"172.20.4.1"}}'
---
apiVersion: k8s.cni.cncf.io/v1
kind: NetworkAttachmentDefinition
metadata: {name: net-transport, namespace: snmp-monitor}
spec:
  config: '{"cniVersion":"0.3.1","name":"net-transport","type":"macvlan","master":"eth0","mode":"bridge","ipam":{"type":"host-local","subnet":"172.20.5.0/24","rangeStart":"172.20.5.100","rangeEnd":"172.20.5.200","gateway":"172.20.5.1"}}'
---
apiVersion: k8s.cni.cncf.io/v1
kind: NetworkAttachmentDefinition
metadata: {name: net-internet, namespace: snmp-monitor}
spec:
  config: '{"cniVersion":"0.3.1","name":"net-internet","type":"macvlan","master":"eth0","mode":"bridge","ipam":{"type":"host-local","subnet":"172.20.6.0/24","rangeStart":"172.20.6.100","rangeEnd":"172.20.6.200","gateway":"172.20.6.1"}}'
---
apiVersion: k8s.cni.cncf.io/v1
kind: NetworkAttachmentDefinition
metadata: {name: net-dc, namespace: snmp-monitor}
spec:
  config: '{"cniVersion":"0.3.1","name":"net-dc","type":"macvlan","master":"eth0","mode":"bridge","ipam":{"type":"host-local","subnet":"172.20.7.0/24","rangeStart":"172.20.7.100","rangeEnd":"172.20.7.200","gateway":"172.20.7.1"}}'
